--- a/index.html
+++ b/index.html
@@ -13,14 +13,20 @@
 </head>
 
 <body>
-    <div class="container">
-        <h1 id="title">FORM</h1>
+    <div class="container" id="container">
+
+        <!--==================================== LEFT ALIGNMENT ========================================= -->
         <div class="row mt-4 mb-4  border border-1 bg-one">
             <div class="col-sm-12 col-md-6  col-lg-6 col-xl-6 col-xxl-6 d-flex align-items-center mt-4">
                 <div>
+                    <h1 id="title">SURVEY-FORM</h1>
                     <img src="./images/undraw_hamburger_-8-ge6.svg" class="img-fluid" alt="">
+                    <p id="description" class="text-center mt-4">PLEASE KINDLY FILL THE ALL FIELDS FOR GOOD EXPERIENCE</p>
                 </div>
             </div>
+
+            <!--================================= RIGHT ALIGNMENT ====================================== -->
+
             <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4 mt-3 offset-xl-1 offset-md-1 offset-lg-1 offset-xxl-1 col-xxl-4 box-bord me-1">
                 <form id="survey-form">
                     <div>
@@ -33,41 +39,45 @@
                     </div>
                     <div class="mt-2">
                         <label class="label-control fs-5 fontchange" for="address">Address</label >
-                        <input id="data" class="inputbox form-control" type="text" placeholder="Location" name="address" required>
+                        <input id="address" class="inputbox form-control" type="text" placeholder="Location" name="address" required>
                     </div>
                     <div class="mt-2">
                         <label class="label-control fs-5 fontchange" for="pincode">PinCode</label>
-                        <input id="data" class="inputbox form-control" type="text" placeholder="621214" maxlength="6" required name="fname">
+                        <input id="pincode" class="inputbox form-control" type="text" placeholder="621214" maxlength="6" required name="fname">
                     </div>
                     <div class="mt-2">
                         <label class="label-control fs-5 fontchange" for="state">State</label >
-                        <input id="data" class="inputbox form-control" type="text" placeholder="Tamil Nadu" required name="fname">
+                        <input id="state" class="inputbox form-control" type="text" placeholder="Tamil Nadu" required name="state">
                     </div>
                     <div class="mt-2">
                         <label class="label-control fs-5 fontchange" for="Country">Country</label>
-                        <input id="data" class="inputbox form-control " type="text" placeholder="india" required name="fname">
+                        <input id="country" class="inputbox form-control " type="text" placeholder="india" required name="fname">
                     </div>
                     <div class="mt-2 choice-div">
                         <label class="label-control fs-5 fontchange" for="gender">Gender</label>
-                        <input id="data" class="choice ms-4" type="radio" name="gender" value="men"> Male
-                        <input id="data" class="choice ms-4" type="radio" name="gender" value="women"> Female
+                        <input id="male" class="choice ms-4" type="radio" name="gender" value="male"> Male
+                        <input id="female" class="choice ms-4" type="radio" name="gender" value="female"> Female
+                        <input id="others" class="choice ms-4" type="radio" name="gender" value="others"> Others
                     </div>
-                    <div class="mt-2 choice-div">
-                        <label class="label-control fs-5 fontchange" for="food">Food</label>
-                        <input id="data" class="choice ms-3 fontchange" type="radio" placeholder="Food" name="choice1"> Noodles
-                        <input id="data" class="choice ms-3 fontchange" type="radio" placeholder="Food" name="choice2"> Veg Rice
-                        <input id="data" class="choice ms-3 fontchange" type="radio" placeholder="Food" name="choice1"> Biriyani <br>
-                        <input id="data" class="choice  fontchange" type="radio" placeholder="Food" name="choice2"> Chicken Rice
-                        <input id="data" class="choice ms-3 fontchange" type="radio" placeholder="Food" name="choice1"> Rice
+                    <div>
+                        <span class="fs-5 choice-div">Select Food</span><br>
+                        <select class=" mt-3" name="foods" id="food" multiple>
+                            <option value="Biriyani">Biriyani</option>
+                            <option value="Chicken Rice">Chicken Rice</option>
+                            <option value="Masal Poori">Masal Poori</option>
+                            <option value="Egg Biriyani">Egg Biriyani</option>
+                            <option value="Mutton Biriyani">Mutton Biriyani</option>
+                        </select>
                     </div>
-                    <div class="btn-lg  mt-2 mb-3 d-flex justify-content-center">
-                        <button class="button btn-lg btn btn-success" id="submit">Submit</button>
+
+                    <!--=============================== BUTTON AND EVENT TRIGGERED =========================== -->
+
+                    <div class="mt-2 mb-3 d-flex justify-content-center">
+                        <button class="button btn-lg btn btn-success" id="submit" type="reset" onclick="append()">Submit</button>
                     </div>
                 </form>
             </div>
-            <p id="description">PLEASE KIDLY FILL THE ALL FIELDS FOR GOOD EXPERIENCE</p>
         </div>
-
     </div>
     <script src="./script.js"></script>
     <script src="https://app.zenclass.in/sheets/v1/js/zen/suite/bundle.js"></script>
